--- a/ProyectoFinal/introduccion/style.css
+++ b/ProyectoFinal/introduccion/style.css
@@ -107,12 +107,14 @@ transition: .2s;
     }
     
     main h2{
-        font-family: 'Share Tech Mono', monospace;
-       background-color: #76e6f5;
+    font-family: 'Share Tech Mono', monospace;
+    background-color: #76e6f5;
     }
+
     main p{
         background-color: #35b5ae;
     }
+
   .video1{
   background-color: rgba(42, 115, 179, 0.618);
   }
@@ -125,18 +127,20 @@ transition: .2s;
            font-family: 'Share Tech Mono', monospace;
       
   }
- 
-------------------------------------------------------
-  *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;
-}
-/*:::::Pie de Pagina*/
+
+
+
+
+
+
+
+
+
+
+/*:::::FOOTER*/
 .pie-pagina{
     width: 100%;
-    background-color: #0a141d;
+    background-color: #e66108;
 }
 .pie-pagina .grupo-1{
     width: 100%;
@@ -146,6 +150,7 @@ transition: .2s;
     grid-template-columns: repeat(3, 1fr);
     grid-gap:50px;
     padding: 45px 0px;
+    
 }
 .pie-pagina .grupo-1 .box figure{
     width: 100%;
@@ -153,44 +158,15 @@ transition: .2s;
     display: flex;
     justify-content: center;
     align-items: center;
+  
 }
+
 .pie-pagina .grupo-1 .box figure img{
-    width: 300px;
-   
+    width: 250px;
+    border-radius:100% ;
 }
-.pie-pagina .grupo-1 .box h2{
-    color: #fff;
-    margin-bottom: 25px;
-    font-size: 20px;
-}
-.pie-pagina .grupo-1 .box p{
-    color: #efefef;
-    margin-bottom: 10px;
-}
-.pie-pagina .grupo-1 .red-social a{
-    display: inline-block;
-    text-decoration: none;
-    width: 45px;
-    height: 45px;
-    line-height: 45px;
-    color: #fff;
-    margin-right: 10px;
-    background-color: #0d2033;
-    text-align: center;
-    transition: all 300ms ease;
-}
-.pie-pagina .grupo-1 .red-social a:hover{
-    color: aqua;
-}
-.pie-pagina .grupo-2{
-    background-color: #0a1a2a;
-    padding: 15px 10px;
-    text-align: center;
-    color: #fff;
-}
-.pie-pagina .grupo-2 small{
-    font-size: 15px;
-}
+
+
 @media screen and (max-width:800px){
     .pie-pagina .grupo-1{
         width: 90%;
@@ -199,3 +175,4 @@ transition: .2s;
         padding: 35px 0px;
     }
 }
+
