--- a/ProyectoFinal/tutoriales/style.css
+++ b/ProyectoFinal/tutoriales/style.css
@@ -124,3 +124,45 @@ h3{
         background-color: #35b5ae;
         font-family: 'Share Tech Mono', monospace;
     }
+
+
+
+    .pie-pagina{
+        width: 100%;
+        background-color: #e66108;
+    }
+    .pie-pagina .grupo-1{
+        width: 100%;
+        max-width: 1200px;
+        margin: auto;
+        display:grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap:50px;
+        padding: 45px 0px;
+        
+    }
+    .pie-pagina .grupo-1 .box figure{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      
+    }
+    
+    .pie-pagina .grupo-1 .box figure img{
+        width: 250px;
+        border-radius:100% ;
+    }
+    
+    
+    @media screen and (max-width:800px){
+        .pie-pagina .grupo-1{
+            width: 90%;
+            grid-template-columns: repeat(1, 1fr);
+            grid-gap:30px;
+            padding: 35px 0px;
+        }
+    }
+    
+    
